Updated general document. Added student documentation.

--- a/Dokumentation/Latex/Dokumenation.tex
+++ b/Dokumentation/Latex/Dokumenation.tex
@@ -75,7 +75,7 @@
 \hyphenation{Cha-otn-gsch-werl}
 \setlength\headheight{1.75cm}
 
-\ihead{\small{Fortgeschrittene Programmierung unter Swift 3 (FWPM)}}
+\ihead{\small{Fortgeschrittene Programmierung unter SWIFT (FWPM)}}
 \chead{}
 \ohead{\includegraphics[height=0.05\textheight]{fh_logo}}
 \pagestyle{scrheadings}
@@ -92,15 +92,15 @@
 
 \titlehead{\begin{center}\includegraphics[width=5cm]{fh_logo}\end{center}}
  \title{
-  Weiterentwicklung der iOS Stundenplan App der Hochschule Hof \\[1em]
+  Teachify - Lernspiele für Kinder \\[1em]
   Dokumentation, Spezifikation, Konstruktion
 }
 
 
-\author{Angelina Scheler, Bastian Kusserow, Christian Pfeiffer, Christian Pöhlmann, \\Johannes Franz, Marcel Hagmann, Maxi Sonntag, Normen Krug,\\Patrick Niepel,
+\author{Angelina Scheler, Bastian Kusserow, Christian Pfeiffer,\\ Christian Pöhlmann, \href{mailto:jofranz90@gmail.com?subject=Swift-Studienarbeit}{Johannes Franz}, Marcel Hagmann, Maximilian Sonntag,\\Normen Krug, Patrick Niepel,
 Phillipp Dümleim, Phillipp Knoblauch}
 
-\date{26.01.2018\\ Vorgelegt bei Prof. Dr.  Sven Rill} %##Abgabedatum einfügen
+\date{09.07.2018\\ Vorgelegt bei Prof. Dr.  Sven Rill} %##Abgabedatum einfügen
 
 
 \begin{document}
@@ -114,7 +114,7 @@ Phillipp Dümleim, Phillipp Knoblauch}
 \pagenumbering{arabic}
 
 %hier die einzelnen Punkte einfügen
-\include{content/exampleHeading}
+\include{content/studentGames}
 %usw. ...
 
 
