Renamed typo in Documentation file name. Updated Pflichtenheft. Updated student docu files.

--- a/Dokumentation/Latex/Dokumentation.tex
+++ b/Dokumentation/Latex/Dokumentation.tex
@@ -1,9 +1,9 @@
 \documentclass[
-    DIV12,
+    DIV=12,
     cleardouble=plain,
     headings=normal,
     pdftex,
-    headexclude,footexclude,
+    %headexclude,footexclude,
     final
 ]{scrreprt}
 
@@ -17,7 +17,7 @@
 \usepackage{scrpage2}
 \usepackage{longtable}
 \usepackage{caption}
-\usepackage{pgfplots}
+%\usepackage{pgfplots} not used?
 \usepackage{float}
 \usepackage{xcolor}
 \usepackage{color tbl}
@@ -100,7 +100,7 @@
 \author{Angelina Scheler, Bastian Kusserow, Christian Pfeiffer,\\ Christian Pöhlmann, \href{mailto:jofranz90@gmail.com?subject=Swift-Studienarbeit}{Johannes Franz}, Marcel Hagmann, Maximilian Sonntag,\\Normen Krug, Patrick Niepel,
 Phillipp Dümleim, Phillipp Knoblauch}
 
-\date{09.07.2018\\ Vorgelegt bei Prof. Dr.  Sven Rill} %##Abgabedatum einfügen
+\date{09.07.2018\\ Vorgelegt bei Prof. Dr. Sven Rill} %##Abgabedatum einfügen
 
 
 \begin{document}
@@ -119,5 +119,4 @@ Phillipp Dümleim, Phillipp Knoblauch}
 
 
 \listoffigures
-
 \end{document}
