--- a/Dokumentation/Latex/Dokumenation.tex
+++ b/Dokumentation/Latex/Dokumenation.tex
@@ -98,7 +98,7 @@
 
 
 \author{Angelina Scheler, Bastian Kusserow, Christian Pfeiffer,\\ Christian Pöhlmann, \href{mailto:jofranz90@gmail.com?subject=Swift-Studienarbeit}{Johannes Franz}, Marcel Hagmann, Maximilian Sonntag,\\Normen Krug, Patrick Niepel,
-Phillipp Dümleim, Phillipp Knoblauch}
+Phillipp Dümleim, Carl Phillipp Knoblauch}
 
 \date{09.07.2018\\ Vorgelegt bei Prof. Dr.  Sven Rill} %##Abgabedatum einfügen
 
@@ -115,6 +115,7 @@ Phillipp Dümleim, Phillipp Knoblauch}
 
 %hier die einzelnen Punkte einfügen
 \include{content/studentGames}
+\include{content/iCloud}
 %usw. ...
 
 
