Updated Dokumentation, Student Games, Pflichtenheft. Introduced a new source folder for sourcecode.

--- a/Dokumentation/Latex/Dokumentation.tex
+++ b/Dokumentation/Latex/Dokumentation.tex
@@ -28,6 +28,7 @@
 \usepackage{comment}
 \usepackage{hyperref}
 % \usepackage{minted} % package for swift
+\usepackage{enumerate}
 
 % Swift language definition
 \lstdefinelanguage{swift}
@@ -98,7 +99,7 @@
 
 
 \author{Angelina Scheler, Bastian Kusserow, Christian Pfeiffer,\\ Christian Pöhlmann, \href{mailto:jofranz90@gmail.com?subject=Swift-Studienarbeit}{Johannes Franz}, Marcel Hagmann, Maximilian Sonntag,\\Normen Krug, Patrick Niepel,
-Phillipp Dümleim, Carl Phillipp Knoblauch}
+Phillipp Dümleim, Phillipp Knoblauch}
 
 \date{09.07.2018\\ Vorgelegt bei Prof. Dr. Sven Rill} %##Abgabedatum einfügen
 
@@ -114,8 +115,9 @@ Phillipp Dümleim, Carl Phillipp Knoblauch}
 \pagenumbering{arabic}
 
 %hier die einzelnen Punkte einfügen
+\include{content/pflichtenheft}
 \include{content/studentGames}
-\include{content/iCloud}
+\include{content/fetchcontroller}
 %usw. ...
 
 
