fixed accidental override

--- a/Dokumentation/Latex/Dokumentation.tex
+++ b/Dokumentation/Latex/Dokumentation.tex
@@ -99,7 +99,7 @@
 
 
 \author{Angelina Scheler, Bastian Kusserow, Christian Pfeiffer,\\ Christian Pöhlmann, \href{mailto:jofranz90@gmail.com?subject=Swift-Studienarbeit}{Johannes Franz}, Marcel Hagmann, Maximilian Sonntag,\\Normen Krug, Patrick Niepel,
-Phillipp Dümleim, Phillipp Knoblauch}
+Phillipp Dümleim, Carl Phillipp Knoblauch}
 
 \date{09.07.2018\\ Vorgelegt bei Prof. Dr. Sven Rill} %##Abgabedatum einfügen
 
@@ -118,6 +118,7 @@ Phillipp Dümleim, Phillipp Knoblauch}
 \include{content/pflichtenheft}
 \include{content/studentGames}
 \include{content/fetchcontroller}
+\include{content/iCloud}
 %usw. ...
 
 
